--- a/base.css
+++ b/base.css
@@ -1,13 +1,12 @@
 
 body {
-  /*font-family: "Lucida Console", "Lucida Sans Unicode", "Lucida Grande", sans-serif, "proxima-nova-1", "proxima-nova-2", Helvetica, Arial, sans-serif;*/
-  font-family: "proxima-nova-1", "proxima-nova-2", Helvetica, Arial, sans-serif;
+  font-family: Monaco, Helvetica, Arial, sans-serif;
   font-size: 24px;
   line-height: 1.2em;
   color: #000000;
   background-color: #ffffff;
   background-repeat: no-repeat;
-  min-height: 100%;
+  /*min-height: 100%;*/
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -28,12 +27,23 @@ tr, td {
   padding: 0 1em;
 }
 
-form, table {
-  /*
-  margin: 0 auto;
+form {
   display: table;
-  */
+  width: 70%;
+  margin: 0 auto;
 }
+
+form, table, button, input, textarea, select {
+  font-family: Monaco, Helvetica, Arial, sans-serif;
+  font-size: 24px;
+  line-height: 1.2em;
+}
+
+form > p > textarea {
+  display: table;
+  width: 90%;
+  margin: 0 auto;
+}      
 
 form .actions {
   margin: 1em;
@@ -44,66 +54,13 @@ form .field span {
   color: #CCCCCC;
 }
 
-#header {
-  display: block;
-  clear: both;
-  width: 40em;
-  margin: 5em auto 5em;
-  position: relative;
-  height: 2em;
-
-  text-align: center;
-  height: 3em;
-}
-
-#guide {
-  display: block;
-  clear: both;
-  width: 40em;
-  margin: 5em auto 2em;
-  position: relative;
-  height: 2em;
-}
-
-#guide ul {
-  font-variant: small-caps;
-  width: 100%;
-  padding: 0;
-}
-
-#guide li {
-  display: inline;
-}
-
-#guide li:active em {
-  background-color: #cccccc;
-  color: #000000;
-}
-
-#guide li a {
-  background-color: #000000;
-  color: #ffffff;
-  width: 16em;
-  text-align: center;
-  display: block;
-  float: left;
-  margin: 0 1px 0 0;
-  padding: 0;
-}
-
-#guide li a:hover {
-/*  background-color: #ffffff;
-  color: #000000;*/
-/*  border: 1px solid #000000;*/
-}
-
 ol, ul {
     list-style: none outside none;
 }
 
 a:link, a:visited {
     color: #000000;
-/*    text-decoration: none;*/
+    text-decoration: none;
 }
 
 #flash {
@@ -114,34 +71,35 @@ a:link, a:visited {
   position: relative;
 }
 
+#header {
+  text-align: center;
+}
+
 #main {
-  /*
-  display: block;
-  clear: both;
-  width: 40em;
-  margin: 2em auto;
-  position: relative;
-  */
+  margin: 1em auto;
+  width: 800px;
+  -moz-border-radius: 0.5em;
+  -webkit-border-radius: 0.5em;
+  border-radius: 0.5em;
 }
 
 #main h1, h2, h3, h4, h5, h6 {
-    border-top: none;
-    border-bottom: 1px solid #CCCCCC;
-    padding: 0 0 0.5em 0;
-    margin: 1em;
+  border-top: none;
+  border-bottom: 1px solid #CCCCCC;
+  padding: 0 0 0.5em 0;
+  margin: 1em;
 }
 
-#footer {
-/*  border: 1px solid black;*/
-  display: block;
-  clear: both;
-  margin: 0 auto;
-  width: 40em;
-  height: 2em;
-  color: #CCCCCC;
-  text-align: center;
+.notice {
+  padding: 1em;
+  margin: 1em auto;
+  -moz-border-radius: 1.0em;
+  -webkit-border-radius: 1.0em;
+  border-radius: 1.0em;
+  border: 2px solid black;
 }
 
 .center {
   text-align: center;
 }
+
