--- a/base.css
+++ b/base.css
@@ -84,10 +84,7 @@ a:link, a:visited {
 }
 
 #main h1, h2, h3, h4, h5, h6 {
-  border-top: none;
-  border-bottom: 1px solid #CCCCCC;
-  padding: 0 0 0.5em 0;
-  margin: 1em;
+  text-align: center;
 }
 
 .notice {
