--- a/base.css
+++ b/base.css
@@ -93,7 +93,7 @@ a:link, a:visited {
   -moz-border-radius: 1.0em;
   -webkit-border-radius: 1.0em;
   border-radius: 1.0em;
-  border: 2px solid black;
+  background-color: #eeeeee;
 }
 
 .center {
