--- a/base.css
+++ b/base.css
@@ -14,7 +14,8 @@ h1, h2, h3, h4, h5, h6 {
   clear: both;
 }
 
-h1 {
+h1 a:link {
+  text-decoration: none;
 }
 
 h4 {
@@ -60,7 +61,6 @@ ol, ul {
 
 a:link, a:visited {
     color: #000000;
-    text-decoration: none;
 }
 
 #flash {
